--- a/224-280-019-000/data.yaml
+++ b/224-280-019-000/data.yaml
@@ -24,7 +24,7 @@ virtualTour:
   matterportID: eLoUeh9r1YF
   menu: Virtual Tour
 homePageData:
-  url: A001.jpg
+  imageName: A001.jpg
   addressLine1: 'Brand new Single Level Home for RENT in Merced'
   addressLine2: '721 Jessie Dr, Merced, CA.'
   bedsAndBaths: '4 Bed, 3 Bath and 2 car attached garage.'
