--- a/224-280-023-000/data.yaml
+++ b/224-280-023-000/data.yaml
@@ -28,7 +28,7 @@ virtualTour:
   matterportID: ZKAxCYTGkBa
   menu: Virtual Tour
 homePageData:
-  url: A001.jpg
+  imageName: A001.jpg
   addressLine1: 'Gorgeous Home for RENT in Merced'
   addressLine2: '710 Jessie Dr, Merced, CA.'
   bedsAndBaths: '4 Bed, 2.5 Bath and 2 car attached garage.'
