--- a/224-280-027-000/data.yaml
+++ b/224-280-027-000/data.yaml
@@ -32,7 +32,7 @@ virtualTour:
   matterportID: qBmkB9jqYis
   menu: Virtual Tour
 homePageData:
-  url: A001.jpg
+  imageName: A001.jpg
   addressLine1: 'Gorgeous Home for RENT in Merced'
   addressLine2: '736 Jessie Dr, Merced, CA.'
   bedsAndBaths: '5 Bed, 3 Bath'
