--- a/425-280-47/data.yaml
+++ b/425-280-47/data.yaml
@@ -30,7 +30,7 @@ virtualTour:
   menu: Virtual Tour
   matterportID: 7evZMbzQ1gK
 homePageData:
-  url: 44-Family-Room2.jpg
+  imageName: 44-Family-Room2.jpg
   addressLine1: 'Luxurious Country Club Hayward'
   addressLine2: ''
   bedsAndBaths: ''
