--- a/499-83-513/data.yaml
+++ b/499-83-513/data.yaml
@@ -21,7 +21,7 @@ virtualTour:
   matterportID: gcyRQ1Aywfp
   menu: Virtual Tour
 homePageData:
-  url: Thumbnail-A2-4822-plainfield.jpg
+  imageName: Thumbnail-A2-4822-plainfield.jpg
   addressLine1: 'Enjoy "home" living in San Jose, CA while renting your own room.'
   addressLine2: '4 bedrooms, 3 bath.'
   bedsAndBaths: '$1,100/Room/Month. Master bedroom with attached bath at $1,600/Room/Month'
