--- a/659-2788/data.yaml
+++ b/659-2788/data.yaml
@@ -17,7 +17,7 @@ description:
     
     <h2 style="text-align: left"> - Park 2 cars in tandem, in Western Addition, SFO.</h2>
 homePageData:
-  url: A0-1239-1241-Scott-Facade.jpg
+  imageName: A0-1239-1241-Scott-Facade.jpg
   addressLine1: 'Garage of 1239-1241 Scott St. SFO'
   addressLine2: 'For Lease at $550 per month'
   bedsAndBaths: ''
