--- a/779-908-728/data.yaml
+++ b/779-908-728/data.yaml
@@ -21,7 +21,7 @@ virtualTour:
   matterportID: LTp8dPm3WTn
   menu: Virtual Tour
 homePageData:
-  url: Walnut-Creek-Home-near-BART.jpg
+  imageName: Walnut-Creek-Home-near-BART.jpg
   addressLine1: 'Remodeled and fully upgraded condo for Rent in Walnut Creek.'
   addressLine2: '3 bedrooms, 2 bath.'
   bedsAndBaths: '$3,250 per month.'
