--- a/87-337-8/data.yaml
+++ b/87-337-8/data.yaml
@@ -27,7 +27,7 @@ virtualTour:
   matterportID: ttsVJdJQBgF
   menu: Virtual Tour
 homePageData:
-  url: 50-Dining.jpg
+  imageName: 50-Dining.jpg
   addressLine1: "RENT a Room with high ceiling, kitchen & Private bathroom in Union City, $1750/month"
   addressLine2: '1042 Chalcedony Ter., Union City, CA.'
   bedsAndBaths: '1 Bed, 1 Bath'
