--- a/999-579-936-199/data.yaml
+++ b/999-579-936-199/data.yaml
@@ -21,7 +21,7 @@ virtualTour:
   matterportID: eCzYpBoLUxm
   menu: Virtual Tour
 homePageData:
-  url: Thumbnail-Merced1925FallBrookCourt-LivingRoom11.jpg
+  imageName: Thumbnail-Merced1925FallBrookCourt-LivingRoom11.jpg
   addressLine1: 'RENT this Awesome Single Story Home in Merced, CA!'
   addressLine2: '4 BR, 2 bath'
   bedsAndBaths: '$2,550/Month'
