--- a/999-799-619-577/data.yaml
+++ b/999-799-619-577/data.yaml
@@ -21,7 +21,7 @@ virtualTour:
   matterportID: ivu9GxPJLnW
   menu: Virtual Tour
 homePageData:
-  url: Thumbnail-A3-681Heitz-Family-1.jpg
+  imageName: Thumbnail-A3-681Heitz-Family-1.jpg
   addressLine1: 'RENT this newly built, Single Level Home in Merced!'
   addressLine2: '4 bedrooms, 2 baths.'
   bedsAndBaths: '$2,250/month.'
