--- a/008-261-018-9/data.yaml
+++ b/008-261-018-9/data.yaml
@@ -21,7 +21,7 @@ priceAndFeatures:
 photos:
   menu: Photos
 homePageData:
-  url: discovery_bay.jpg
+  imageName: discovery_bay.jpg
   addressLine1: 'Elegant Discovery Bay Single Family Home!'
   addressLine2: ''
   bedsAndBaths: ''
