--- a/1241/data.yaml
+++ b/1241/data.yaml
@@ -25,7 +25,7 @@ virtualTour:
   matterportID: enqRSzxhRU5
   menu: Virtual Tour
 homePageData:
-  url: A4-1241-Scott-LivingRoom-576x324.jpg
+  imageName: A4-1241-Scott-LivingRoom-576x324.jpg
   addressLine1: 'Impeccable Top story Edwardian home for RENT: 1241 Scott St, SFO.'
   addressLine2: '3 BR + formal dining & 1.5 bath'
   bedsAndBaths: '$5,200 per month + optional garage/storage.'
