--- a/223-200-022/data.yaml
+++ b/223-200-022/data.yaml
@@ -19,10 +19,10 @@ virtualTour:
   title: 2120 N Donovan Way, San Ramon, CA 94582
   matterportID: 7iw81R2pGZS
   menu: Virtual Tour
-homePageNavigation:
+homePageLink:
   menu: Showcase
 homePageData:
-  url: 01-Kitchen-Nook-Living.jpg
+  imageName: 01-Kitchen-Nook-Living.jpg
   addressLine1: 'Awesome San Ramon Home'
   addressLine2: ''
   bedsAndBaths: '3 Bedroom, 2 full & 1 partial bath. 1646 sq.ft on 4011 sq.ft lot. Built in 2003'
