--- a/32-345-654/data.yaml
+++ b/32-345-654/data.yaml
@@ -19,10 +19,10 @@ photos:
 video:
   youtubeVideoID: s6nIXXw4Ons
   menu: Video
-homePageNavigation:
+homePageLink:
   menu: Showcase
 homePageData:
-  url: a0-576x324-34228Northwind2020-12-07-16h48m22s151.jpg
+  imageName: a0-576x324-34228Northwind2020-12-07-16h48m22s151.jpg
   addressLine1: 'Beautiful contemporary Fremont Home - SOLD!'
   addressLine2: ''
   bedsAndBaths: ''
