--- a/39622/data.yaml
+++ b/39622/data.yaml
@@ -17,10 +17,10 @@ virtualTour:
   title: "39622 Trinity Way, Fremont, CA, 94538"
   matterportID: aFNyZgpDGGK
   menu: Virtual Tour
-homePageNavigation:
+homePageLink:
   menu: Showcase
 homePageData:
-  url: A01-LivingRoom-576x324.jpg
+  imageName: A01-LivingRoom-576x324.jpg
   addressLine1: 'Delightful duet-style townhome in Fremont - Pending!'
   addressLine2: ''
   bedsAndBaths: ''
