--- a/41-935-654/data.yaml
+++ b/41-935-654/data.yaml
@@ -19,10 +19,10 @@ photos:
 video:
   youtubeVideoID: hwQnmiIKjPs
   menu: Video
-homePageNavigation:
+homePageLink:
   menu: Showcase
 homePageData:
-  url: a0-34157Donahue2020-12-07-12h10m41s905.jpg
+  imageName: a0-34157Donahue2020-12-07-12h10m41s905.jpg
   addressLine1: 'Stunning Ardenwood Home - SOLD!'
   addressLine2: ''
   bedsAndBaths: ''
