--- a/531-22-224/data.yaml
+++ b/531-22-224/data.yaml
@@ -15,7 +15,7 @@ priceAndFeatures:
 photos:
   menu: Photos
 homePageData:
-  url: a0-5136-SilverReef-Dr.jpg
+  imageName: a0-5136-SilverReef-Dr.jpg
   addressLine1: 'Spacious Fremont Single Family Home!'
   addressLine2: ''
   bedsAndBaths: ''
