--- a/543-471-265/data.yaml
+++ b/543-471-265/data.yaml
@@ -23,10 +23,10 @@ virtualTour:
   title: 34122 Asti Ter, Fremont, CA 94555
   matterportID: rd3zAUfdjeX
   menu: Virtual Tour
-homePageNavigation:
+homePageLink:
   menu: Showcase
 homePageData:
-  url: 31_34122AstiTerraceFremontCa9455509152020_185857_mls.jpg
+  imageName: 31_34122AstiTerraceFremontCa9455509152020_185857_mls.jpg
   addressLine1: 'Ardenwood Fremont Townhome - SOLD!'
   addressLine2: ''
   bedsAndBaths: ''
