--- a/98-835-654/data.yaml
+++ b/98-835-654/data.yaml
@@ -19,10 +19,10 @@ photos:
 video:
   youtubeVideoID: qxWvpSkVY_8
   menu: Video
-homePageNavigation:
+homePageLink:
   menu: Showcase
 homePageData:
-  url: b4-576x32434343Tupelo2020-12-15-20h14m45s682.jpg
+  imageName: b4-576x32434343Tupelo2020-12-15-20h14m45s682.jpg
   addressLine1: 'Gorgeous, Radiant Ardenwood Home - SOLD!'
   addressLine2: ''
   bedsAndBaths: ''
