Testing functionality of deleting sections in the siteSpecific

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -32,3 +32,9 @@ homePageData:
   bedsAndBaths: ''
   price: ''
   listingPageURL: "https://google.com/"
+siteSpecific:
+  lp-showcase:
+    video:
+      youtubeVideoID: xjpQRTNhbwk
+      menu: Video
+      disable: true
