Testing functionality of deleting sections in the siteSpecific

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -31,7 +31,7 @@ homePageData:
   addressLine2: ''
   bedsAndBaths: ''
   price: ''
-  listingPageURL: "https://google.com/"
+  listingPageURL:
 siteSpecific:
   lp-showcase:
     video:
