Testing functionality of deleting sections in the siteSpecific

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -38,3 +38,6 @@ siteSpecific:
       youtubeVideoID: xjpQRTNhbwk
       menu: Video
       disable: true
+    photos:
+      menu: Photos
+      disable: true
