Testing chatbot enabling with the new  schema

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -32,6 +32,8 @@ homePageData:
   bedsAndBaths: ''
   price: ''
   listingPageURL:
+chatbot:
+  chatbotDFAgent:
 siteSpecific:
   lp-showcase:
     video:
