Testing chatbot enabling with the new  schema

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -33,7 +33,7 @@ homePageData:
   price: ''
   listingPageURL:
 chatbot:
-  chatbotDFAgent:
+  chatbotDFAgent: default
 siteSpecific:
   lp-showcase:
     video:
