Testing chatbot disabling with the new  schema

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -40,3 +40,6 @@ siteSpecific:
       disable: true
     photos:
       menu: Photos12
+    chatbot:
+      chatbotDFAgent: default
+      disable: true
