Testing if sections are enabled or disabled based on the section order

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -43,3 +43,5 @@ siteSpecific:
       disable: true
     chatbot:
       disable: true
+    propertyPageSectionsOrder: [priceAndFeatures, virtualTour,video, photos, contact, realtor]
+    
