Testing disabling propertyPageSectionsOrder

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -37,10 +37,8 @@ chatbot:
   chatbotDFAgent: default
 siteSpecific:
   lp-showcase:
-    video:
-      disable: true
-    photos:
-      disable: true
     chatbot:
+      disable: true
+    propertyPageSectionsOrder:
       disable: true
     
