--- a/111/data.yaml
+++ b/111/data.yaml
@@ -39,6 +39,8 @@ siteSpecific:
   lp-showcase:
     chatbot:
       disable: true
+    propertyPageSectionsOrder:
+      disable: true
     realtor:
       disable: true
     
