Debugging map error after the refactoring

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -37,6 +37,8 @@ chatbot:
   chatbotDFAgent: default
 siteSpecific:
   lp-showcase:
+    chatbot:
+      disable: true
     propertyPageSectionsOrder:
       disable: true
     realtor:
