Debugging map error after the refactoring

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -36,7 +36,7 @@ homePageData:
 chatbot:
   chatbotDFAgent: default
 siteSpecific:
-  lp-showcase:
+  lp-vivek:
     chatbot:
       disable: true
     propertyPageSectionsOrder:
