Testing: Override Global Data per Site

--- a/global/data.yaml
+++ b/global/data.yaml
@@ -40,7 +40,7 @@ siteSpecific:
       phone: "925-452-7483"
       logo: YHSG-Final.png
       menu: Realtor
-      sectionTitle: Courtesy Of
+      sectionTitle: Testing - Courtesy Of
       footerText: More info on our Guarantee at
       footerLinkText: EastBayGuaranteedSale.com
       footerLink: https://www.weberealty.com/lp-ebgs.html
