Testing: Reorder Homepage Sections, Reorder Property Page Sections

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -6,7 +6,7 @@ showcase:
   menu: Showcase
   properties:
   sectionTitle: Showcase
-homePageSectionsOrder: [showcase, contact, realtor]
+homePageSectionsOrder: [realtor, showcase, contact]
 siteSpecific:
   lp-bestbuys:
     showcase:
