Deploying a site with all the sections for testing - lp-test

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -2,7 +2,7 @@ siteName:
   - lp-showcase
   - lp-bestbuys
   - lp-bayrentals
-  - lp-vivek
+  - lp-test
 showcase:
   menu: Showcase
   properties:
