--- a/global/data.yaml
+++ b/global/data.yaml
@@ -3,7 +3,7 @@ siteName:
   - lp-showcase
   - lp-bestbuys
   - lp-bayrentals
-  - lp-vivek
+  - lp-test
 realtor:
   photo: praveen.jpg
   name: Praveen Kumar
