--- a/111/data.yaml
+++ b/111/data.yaml
@@ -14,6 +14,15 @@ priceAndFeatures:
   yearBuilt: 'Year Built: 2021'
   price: 'HOA: $77/mo'
   menu: Price & Features
+realtor:
+  photo: praveen11.jpg
+  name: Praveen Kumar
+  company: Broker & Owner, WebERealty
+  id: "CA BRE License #: 01928307"
+  phone: "925-452-7483"
+  logo: YHSG-Final11.png
+  menu: Realtor
+  sectionTitle: Get Instant Alerts on Coming Soon listings and homes NOT available online.
 photos:
   menu: Photos
   sectionTitle: Photos
