Testing Rollbar for img

--- a/global/data.yaml
+++ b/global/data.yaml
@@ -4,7 +4,7 @@ siteName:
   - lp-bestbuys
   - lp-bayrentals
 realtor:
-  photo: praveen.jpg
+  photo: praveen11.jpg
   name: Praveen Kumar
   company: Broker & Owner, WebERealty
   id: "CA BRE License #: 01928307"
