remove a section using siteSpecific property in Property data

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -31,3 +31,7 @@ homePageData:
   bedsAndBaths: ''
   price: ''
   listingPageURL:
+siteSpecific:
+  lp-showcase:  
+    virtualTour:
+      disable: true
