Unsupported section names

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -1,10 +1,10 @@
 ---
 siteName:
   - lp-showcase	
-home:
+home1:
   youtubeVideoID: xjpQRTNhbwk
   menu: Home
-priceAndFeatures:
+priceAndFeatures1:
   title1: 'Tracy Hills Residence-1'
   title2: '$892,880' 
   beds: 4 Beds
