--- a/global/data.yaml
+++ b/global/data.yaml
@@ -3,7 +3,7 @@ siteName:
   - lp-showcase
   - lp-bestbuys
   - lp-bayrentals
-realtor:
+realtor1:
   photo: praveen11.jpg
   name: Praveen Kumar
   company: Broker & Owner, WebERealty
