--- a/home/data.yaml
+++ b/home/data.yaml
@@ -2,7 +2,7 @@ siteName:
   - lp-showcase
   - lp-bestbuys
   - lp-bayrentals
-showcase:
+showcase1:
   menu: Showcase
   properties:
   sectionTitle: Showcase
