Unsupported property names

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -4,8 +4,8 @@ siteName:
 home1:
   youtubeVideoID: xjpQRTNhbwk
   menu: Home
-priceAndFeatures1:
-  title1: 'Tracy Hills Residence-1'
+priceAndFeatures:
+  title1Vivek: 'Tracy Hills Residence-1'
   title2: '$892,880' 
   beds: 4 Beds
   baths: 3.5 Baths
