Empty property value in a section

--- a/111/data.yaml
+++ b/111/data.yaml
@@ -5,7 +5,7 @@ home1:
   youtubeVideoID: xjpQRTNhbwk
   menu: Home
 priceAndFeatures:
-  title1Vivek: 'Tracy Hills Residence-1'
+  title1: 
   title2: '$892,880' 
   beds: 4 Beds
   baths: 3.5 Baths
