--- a/global/data.yaml
+++ b/global/data.yaml
@@ -4,8 +4,8 @@ siteName:
   - lp-bestbuys
   - lp-bayrentals
 realtor:
-  photoVivek: praveen11.jpg
-  name: Praveen Kumar
+  photo: praveen11.jpg
+  name: 
   company: Broker & Owner, WebERealty
   id: "CA BRE License #: 01928307"
   phone: "925-452-7483"
