--- a/111/data.yaml
+++ b/111/data.yaml
@@ -6,7 +6,7 @@ home:
   menu: Home
 priceAndFeatures:
   title1: 
-  title2: '$892,880' 
+  title2: 
   beds: 4 Beds
   baths: 3.5 Baths
   homeType: Single-Home
