Deleting all the images in a property folder

--- a/global/data.yaml
+++ b/global/data.yaml
@@ -5,7 +5,7 @@ siteName:
   - lp-bayrentals
 realtor:
   photo: praveen11.jpg
-  name: 
+  name: Praveen Kumar
   company: Broker & Owner, WebERealty
   id: "CA BRE License #: 01928307"
   phone: "925-452-7483"
