--- a/111/data.yaml
+++ b/111/data.yaml
@@ -5,8 +5,8 @@ home:
   youtubeVideoID: xjpQRTNhbwk
   menu: Home
 priceAndFeatures:
-  title1: 
-  title2: 
+  title1: 'Tracy Hills Residence-1'
+  title2: '$892,880' 
   beds: 4 Beds
   baths: 3.5 Baths
   homeType: Single-Home
