Added property for lp-yawnavonod0212

--- a/home/data.yaml
+++ b/home/data.yaml
@@ -18,3 +18,8 @@ siteSpecific:
       menu: Rentals
       properties: 
       sectionTitle: Rentals in Bay Area
+  lp-yawnavonod0212::
+    showcase:
+      menu: Showcase
+      properties:
+      sectionTitle: Showcase
