--- a/global/data.yaml
+++ b/global/data.yaml
@@ -85,3 +85,31 @@ siteSpecific:
           y: 3
           z: 10000
         pageType: lp
+  lp-yawnavonod0212:
+    realtor:
+      photo: praveen.jpg
+      name: Praveen Kumar
+      company: Broker & Owner, WebERealty
+      id: "CA BRE License #: 01928307"
+      phone: "925-452-7483"
+      logo: YHSG-Final.png
+      menu: Realtor
+      sectionTitle: Get Instant Alerts on Coming Soon listings and homes NOT available online.
+    footertext:
+      line1: Information courtesy of Praveen Kumar 01928307 @ WebERealty
+      line2: "12935 Alcosta Blvd. #3681, San Ramon ,California, 94583"
+      line3: praveen@weberealty.com
+    page:
+      title: Praveen Kumar - Your Home Sold Guaranteed or I"ll Buy it!  
+    contact:
+      menu: Contact
+      mauticForm:
+        formSetName: "yawnavonod0212"
+        emailFormHeader: "Access COMING SOON houses for SALE:"
+        phoneFormHeader: "Best number to reach you?"
+        popupForm:
+          enable: true
+          x: 5000
+          y: 3
+          z: 10000
+        pageType: lp
