Added property for lp-yawnavonod0212

--- a/global/data.yaml
+++ b/global/data.yaml
@@ -96,7 +96,7 @@ siteSpecific:
       logo: YHSG-Final.png
       menu: Realtor
       sectionTitle: Get Instant Alerts on Coming Soon listings and homes NOT available online.
-    footertext:
+    footer:
       line1: Information courtesy of Praveen Kumar 01928307 @ WebERealty
       line2: "12935 Alcosta Blvd. #3681, San Ramon ,California, 94583"
       line3: praveen@weberealty.com
