Adding property from lp-b-12tpardekalhtron164 and adding homePageLink for lp-yawnavonod0212

--- a/223-200-022/data.yaml
+++ b/223-200-022/data.yaml
@@ -31,6 +31,8 @@ homePageData:
   listingPageURL:
 siteSpecific:
   lp-yawnavonod0212:
+    homePageLink:
+      menu: Showcase
     priceAndFeatures:
       title1: "Awesome Windemere, San Ramon home for Sale or Trade"
       title2: "Price Reduced by $100K "
