--- a/global/data.yaml
+++ b/global/data.yaml
@@ -4,6 +4,7 @@ siteName:
   - lp-bestbuys
   - lp-bayrentals
   - lp-yawnavonod0212
+  - lp-b-12tpardekalhtron164
 realtor:
   photo: praveen.jpg
   name: Praveen Kumar
@@ -110,6 +111,34 @@ siteSpecific:
         phoneFormHeader: "Best number to reach you?"
         popupForm:
           enable: true
+          x: 5000
+          y: 3
+          z: 10000
+        pageType: lp
+  lp-b-12tpardekalhtron164:
+    realtor:
+      photo: praveen.jpg
+      name: Praveen Kumar
+      company: Broker & Owner, WebERealty
+      id: "CA BRE License #: 01928307"
+      phone: "925-452-7483"
+      logo: YHSG-Final.png
+      menu: Realtor
+      sectionTitle: Get Instant Alerts on Coming Soon listings and homes NOT available online.
+    footer:
+      line1: Information courtesy of Praveen Kumar 01928307 @ WebERealty
+      line2: "12935 Alcosta Blvd. #3681, San Ramon ,California, 94583"
+      line3: praveen@weberealty.com
+    page:
+      title: Praveen Kumar - Your Home Sold Guaranteed or I"ll Buy it!  
+    contact:
+      menu: Contact
+      mauticForm:
+        formSetName: "b-12tpardekalhtron164"
+        emailFormHeader: "Access COMING SOON houses for SALE:"
+        phoneFormHeader: "Best number to reach you?"
+        popupForm:
+          enable: false
           x: 5000
           y: 3
           z: 10000
